<resources>
    <string name="app_name">Buddy</string>
    <string name="descriptionLogo">logo</string>
    <string name="descriptionDeco">deco</string>
    <string name="descriptionIcon">icon</string>
    <string name="descriptionImage">image</string>
    <string name="credits">© Ebert, Filip, Rebecca, Quinten</string>
    <string name="slogan">Plant your future.</string>
    <string name="team">2022\nEE5 - IoT3</string>
    <string name="teamNames">Ebert Kiekens\nFilip Jakub Tomczyk\nRebecca Tang\nQuinten Martens</string>
    <string name="login">Log in</string>
    <string name="haveAcc">Already have an account? Log in.</string>
    <string name="backLogin">Back to log in.</string>
    <string name="logout">Log out</string>
    <string name="fillFields">Please fill in all fields correctly.</string>
    <string name="emailused">Email already in use.</string>
    <string name="wrongPassword">Your current password is not correct.</string>
    <string name="register">Register</string>
    <string name="noAcc">Don’t have an account? Register.</string>
    <string name="passw">Password</string>
    <string name="confPassw">Confirm Password</string>
    <string name="newPassw">New Password</string>
    <string name="currPassw">Current Password</string>
    <string name="passwRequire">Password Requirements</string>
    <string name="passwReqText">At least 8 characters,\n a number and an uppercase.</string>
    <string name="request">Request Reset</string>
    <string name="sendMail">Send Email</string>
    <string name="mailSucces">An email has been successfully sent. Please check your inbox.</string>
    <string name="forgotPass">Forgot your password? Reset it.</string>
    <string name="reset">Reset Password</string>
    <string name="changePassw">Change Password</string>
    <string name="incorrectCreds">Password or email is incorrect!</string>
    <string name="incorrectEmail">Mail does not belong to existing user.</string>
    <string name="emailAlreadyUsed">Email is already in use, try a different email!</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="account">My Account</string>
    <string name="editAcc">Edit Account</string>
    <string name="edit">Edit</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="expired">Session expired. Please login again.</string>
    <string name="howToBlufi">How to connect BluFi</string>
    <string name="infoBlufiMain">Select the BluFi device you want to connect with.</string>
    <string name="infoBlufiConnect">Connect with this device and configure the WiFi options.</string>
    <string name="blufiConnected">BluFi connected</string>
    <string name="blufiNotConnected">BluFi not connected.\nShowing last received data.</string>
    <string name="error">An error occurred, try again later.</string>
    <string name="notAllFilled">Please fill in all fields.</string>
    <string name="minMaxError">Please make sure minimum values are lower than maximum values.</string>
    <string name="speciesExists">This species already exists.</string>
    <string name="plantExists">A plant with this name and species already exists.</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome,</string>
    <string name="myPlants">My Plants</string>
    <string name="noPlants">You don\'t have any plants yet.\nClick on the plus sign on the upper right to add your first plant!</string>
    <string name="plantNameText">Plant name</string>
    <string name="place">Place</string>
    <string name="watering">Last Watering</string>
    <string name="waterTank">Water Tank</string>
    <string name="moisture">Moisture</string>
    <string name="light">Light</string>
    <string name="temp">Temp.</string>
    <string name="temperature">Temperature</string>
    <string name="percentage">%</string>
    <string name="degrees">°C</string>
    <string name="noCustomText">Please fill in a custom text or uncheck the custom display option.</string>
    <string name="noLibPlants">There are no plants in your library yet.\nClick below to manually add your first plant!</string>
    <string name="addPlant">Add Plant</string>
    <string name="browseTitle">Browse Library</string>
    <string name="manualAdd">Manually Add Plant</string>
    <string name="manualWater">Press to water manually</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="standardSettings">Use Standard Settings</string>
    <string name="moistureRange">Moisture Range</string>
    <string name="lightRange">Light Range</string>
    <string name="tempRange">Temperature Range</string>
    <string name="min">Min</string>
    <string name="stripe">-</string>
    <string name="max">Max</string>
    <string name="years">Years</string>
    <string name="and">&amp;</string>
    <string name="months">Months</string>
    <string name="roomName">Room name</string>
    <string name="alerts">Alerts</string>
    <string name="waterlvl">Min. Water lvl</string>
    <string name="age">Age</string>
    <string name="display">Display</string>
    <string name="power">Power</string>
    <string name="customDisp">Custom Display</string>
    <string name="customText">Custom Text</string>
    <string name="text">Text</string>
    <string name="howToValues">How to choose good values</string>
    <string name="valuesTips">Moisture\nIn water, the moisture would be 80%, dry ground would be 20%. On average 55% in soil with some water.\n-\nLight\n10% would be total darkness, 80% would be like shining a light directly on the plant. On average, you would be around 60% in a normally lit room.\n-\nTemperature\nAverage room temperature is around 25°C. You can only enter values from -10°C to 40°C\n-\nMin. Water lvl\nAt what water level do you want a notification to refill the tank? Choosing 30% means there is 3cm water left (in height) in the tank.\n-\nAge\nHow long has your plant been alive? Years can only be a positive number with 2 numbers max. and months is a number from 1 to 12.\n-\nOther Fields\nAll other field only allow 20 characters.</string>
    <string name="overview">Overview</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="deleteLib">Delete from library</string>
    <string name="name">Name</string>
    <string name="addNewPlant">Add New Plant</string>
    <string name="species">Species</string>
    <string name="speciesName">Species Name</string>
    <string name="addPic">Add Picture</string>
    <string name="addSpecies">Add species to library</string>
    <string name="howTo">How to use the charts</string>
    <string name="graphUse">The earliest date you can go back to is the date your first planted your plant that is calculated with the age of the plant you filled in.\n-\nTap on the chart to highlight a datapoint, tap again to remove it.\n-\nDouble tap to see the values of all data points, double tap again to remove them.\n-\nIf there is only one value on the chart, the data point value will be shown automatically without double tapping.\n-\nPinch to zoom.</string>
    <string name="string_unknown">Unknown</string>
    <string name="main_title">EspBluFi</string>
    <string name="main_bt_disable_msg">Bluetooth is disabled</string>
    <string name="main_location_disable_msg">Location is disable</string>
    <string name="main_menu_settings">Settings</string>
    <string name="blufi_function_connect">Connect</string>
    <string name="blufi_function_connect_msg">Try connecting device</string>
    <string name="blufi_function_disconnect">Disconnect</string>
    <string name="blufi_function_disconnect_msg">Disconnect device</string>
    <string name="blufi_function_security">Security</string>
    <string name="blufi_function_security_msg">Negotiate security with device</string>
    <string name="blufi_function_version">Version</string>
    <string name="blufi_function_version_msg">Get the device BluFi version</string>
    <string name="blufi_function_device_status">Status</string>
    <string name="blufi_function_device_status_msg">Get the device status</string>
    <string name="blufi_function_configure">Configure</string>
    <string name="blufi_function_configure_msg">Configure network for device</string>
    <string name="blufi_function_device_scan">ScanWifi</string>
    <string name="blufi_function_device_scan_msg">Get ssid list the device scanned</string>
    <string name="blufi_function_custom">Custom</string>
    <string name="blufi_function_custom_msg">Send custom data to device</string>
    <string name="blufi_custom_dialog_title">Input custom text</string>
    <string name="configure_title">Configure</string>
    <string name="configure_sel_device_mode">Select device mode</string>
    <string name="configure_softap_security">SoftAP Security</string>
    <string name="configure_softap_ssid">SoftAP ssid</string>
    <string name="configure_softap_password">SoftAP password</string>
    <string name="configure_softap_password_error">SoftAP password is too short</string>
    <string name="configure_softap_channel">SoftAP channel</string>
    <string name="configure_softap_max_connection">SoftAP max connection</string>
    <string name="configure_station_sel_wifi">Select Wifi</string>
    <string name="configure_station_ssid">Wifi SSID</string>
    <string name="configure_station_ssid_error">Wifi ssid can\'t be empty</string>
    <string name="configure_station_wifi_5g_error">The device does not support 5G Wifi</string>
    <string name="configure_station_wifi_5g_dialog_message">The device does not support 5G Wifi, continue to configure?</string>
    <string name="configure_station_wifi_5g_dialog_continue">Continue</string>
    <string name="configure_station_wifi_5g_dialog_cancel">Cancel</string>
    <string name="configure_station_password">Wifi password</string>
    <string name="configure_station_wifi_scanning">Scanning wifi…</string>
    <string name="configure_station_wifi_scanning_nothing">Found no WIFI</string>
    <string name="configure_wifi_disable_msg">Wifi is disable</string>
    <string name="configure_wifi_no_selected_msg">No wifi has selected</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_blufi_key">setting_category_blufi</string>
    <string name="settings_category_blufi_title">BluFi</string>
    <string name="settings_mtu_length_key">settings_key_mtu_length</string>
    <string name="settings_mtu_length_title">Set mtu length</string>
    <string name="settings_mtu_length_hint">Enter a number great than 15</string>
    <string name="settings_ble_prefix_key">settings_key_ble_prefix</string>
    <string name="settings_ble_prefix_title">BLE devices filter</string>
    <string name="settings_ble_prefix_hint">Device name start with</string>
    <string name="settings_category_version_title">Version</string>
    <string name="settings_version_key">settings_key_version</string>
    <string name="settings_version_title">APP Version</string>
    <string name="settings_blufi_version_key">settings_key_blufi_version</string>
    <string name="settings_blufi_version_title">BluFi lib version</string>
    <string name="settings_upgrade_check_key">settings_upgrade_check</string>
    <string name="settings_upgrade_check_title">Check APP latest version</string>
    <string name="settings_upgrade_check_failed">Get latest release information failed</string>
    <string name="settings_upgrade_check_not_found">Not found new release</string>
    <string name="settings_upgrade_check_current_latest">Current APP is latest</string>
    <string name="settings_upgrade_check_disciver_new">Discover new version APP, Click to download</string>
    <string name="settings_upgrade_dialog_title">Discover new version</string>
</resources>