<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Info">

    <ImageView
        android:id="@+id/deco2"
        android:layout_width="540dp"
        android:layout_height="500dp"
        android:layout_marginBottom="110dp"
        android:contentDescription="@string/descriptionDeco"
        android:rotation="-5"
        app:layout_constraintBottom_toBottomOf="@+id/logoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deco2" />

    <ImageView
        android:id="@+id/deco1"
        android:layout_width="493dp"
        android:layout_height="320dp"
        android:layout_marginBottom="185dp"
        android:contentDescription="@string/descriptionDeco"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="@+id/deco2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deco1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/deco3"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/descriptionDeco"
        android:rotation="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoMain"
        app:srcCompat="@drawable/deco3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="21.9dp"
        android:layout_height="21.04dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/descriptionIcon"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/team"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <TextView
        android:id="@+id/teamNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/teamNames"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <View
        android:id="@+id/line"
        android:layout_width="54dp"
        android:layout_height="3dp"
        android:layout_marginTop="21dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team" />

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/descriptionLogo"
        android:transitionName="transitionmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/logoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>