<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".activities.RequestReset">

    <ImageView
        android:id="@+id/deco2"
        android:layout_width="540dp"
        android:layout_height="500dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/descriptionDeco"
        android:rotation="-5"
        app:layout_constraintBottom_toBottomOf="@+id/logoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deco2" />

    <ImageView
        android:id="@+id/deco3"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/descriptionDeco"
        android:rotation="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMain"
        app:srcCompat="@drawable/deco3"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/requestBtn"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_btn_main"
        android:fontFamily="@font/mulish_extrabold"
        android:onClick="sendmail"
        android:text="@string/sendMail"
        android:textColor="@color/beige"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailFill_request"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/backLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mulish_light"
        android:onClick="goLogin"
        android:text="@string/backLogin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestBtn"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/emailFill_request"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_fill"
        android:ems="10"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMain"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/descriptionLogo"
        android:onClick="goInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <TextView
        android:id="@+id/requestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/request"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/logoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/errorMessage_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@null"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/requestBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/loading_reset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailFill_request" />

</androidx.constraintlayout.widget.ConstraintLayout>